Fix bug with overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -100,7 +100,6 @@ html {
 }
 
 .wrapper {
-  overflow-x: hidden;
   position: relative;
   height: 100%;
   display: flex;
